@@ -94,5 +94,6 @@
         <file>images/services/gametrailers.com.png</file>
         <file>images/services/tudou.com.png</file>
         <file>images/services/myspass.de.png</file>
+        <file>images/services/mp3tube.net.png</file>
     </qresource>
 </RCC>
